public/global.css
html {
    height: 100%;
    width: 100%;
    background-image: url(https://raw.githubusercontent.com/notAperson535/Win11-HTML/main/img/backgroundlight.jpg);
    overflow: hidden;
    background-position: 50%;
    background-repeat: no-repeat;
    background-size: cover;
}

body {
    height: 100%;
    width: 100%;
    margin: 0px;
    padding: 0;
    background: rgba(255, 255, 255, 0.8);
    backdrop-filter: saturate(3) blur(20px);
}

@font-face {
    font-family: "Segoe UI Variable";
    font-style: normal;
    font-weight: 400;
    src: local("Segoe UI Variable"),
        url("https://fonts.cdnfonts.com/s/63254/SegoeUIVF.woff") format("woff");
}

* {
    font-family: Segoe UI Variable, Segoe UI;
    transition: all 0.2s;
}

#sidebar {
    width: 250px;
    height: 100%;
}

#newtabbutton {
    color: #7d7c84;
}

.tab,
#newtabbutton {
    display: flex;
    align-items: center;
    width: calc(100% - 20px);
    margin-left: 10px;
    height: 45px;
    border-radius: 10px;
}

.tabfavicon,
#newtabbutton img {
    width: 17.5px;
    margin-right: 5px;
    border-radius: 17.5px;
    margin-left: 10px;
}

.tab p,
#newtabbutton p {
    margin: 0px;
    justify-self: baseline;
}

.tabclose {
    margin-left: auto;
    width: 10px;
    margin-right: 10px;
}

.tab.active {
    -webkit-box-shadow: 3px 3px 5px -4px rgba(119, 119, 119, 0.71);
    box-shadow: 3px 3px 5px -4px rgba(119, 119, 119, 0.71);
    background: rgba(255, 255, 255, 0.8);
    backdrop-filter: saturate(3) blur(20px);
}

iframe {
    position: absolute;
    height: calc(100% - 20px);
    width: calc(100% - 270px);
    top: 10px;
    left: 260px;
    border: 0px;
    outline: 0px;
    border-radius: 10px;
    display: none;
}

